# dn-splatter

./: .gitignore  README.md  depth_normal_consistency.py  environment.yml  index.html  install_IsoOctree.sh  isooctree.py  pixi.toml  pyproject.toml  render.py  train.py
arguments/: __init__.py
dn_splatter/: __init__.py  dn_config.py  dn_datamanager.py  dn_model.py  dn_pipeline.py  export_mesh.py  losses.py  metrics.py  regularization_strategy.py
dn_splatter/data/: coolermap_dataparser.py  dn_dataset.py  g_sdfstudio_dataparser.py  mushroom_dataparser.py  normal_nerfstudio.py  nrgbd_dataparser.py  replica_dataparser.py  scannetpp_dataparser.py
dn_splatter/eval/: batch_run.py  eval.py  eval_configs.py  eval_instructions.md  eval_mesh.py  eval_mesh_mushroom.py  eval_mesh_mushroom_vis_cull.py  eval_mesh_vis_cull.py  eval_normals.py  eval_pd.py  g_nerfacto.py  g_neusfacto.py  mushroom_to_sdfstudio.py
dn_splatter/scripts/: align_depth.py  compare_normals.py  comparison_video.sh  convert_colmap.py  depth_from_pretrain.py  depth_normal_consistency.py  depth_to_normal.py  isooctree_dn.py  normals_from_pretrain.py  poses_to_colmap_sfm.py  process_sai.py  process_to_colmap_sfm.py  render_model.py  (+1 more)
eval/: eval_mesh.py  eval_mesh_mushroom.py  eval_nvs.py
gaussian_renderer/: __init__.py
scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py
scripts/: dtu_eval.py  m360_eval.py
utils/: camera_utils.py  general_utils.py  image_utils.py  loss_utils.py  mcube_utils.py  mesh_utils.py  pd_utils.py  point_utils.py  pointcloud_utils.py  rays.py  render_utils.py
(+46 files in other folders)
